CSS Footer Ok :athletic_shoe:

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,53 @@
+/* OCULTAR PARTS */
+.hidden-xs-up {
+  display: none !important;
+}
+
+@media (max-width: 575px) {
+  .hidden-xs-down {
+    display: none !important;
+  }
+}
+@media (min-width: 576px) {
+  .hidden-sm-up {
+    display: none !important;
+  }
+}
+@media (max-width: 767px) {
+  .hidden-sm-down {
+    display: none !important;
+  }
+}
+@media (min-width: 768px) {
+  .hidden-md-up {
+    display: none !important;
+  }
+}
+@media (max-width: 991px) {
+  .hidden-md-down {
+    display: none !important;
+  }
+}
+@media (min-width: 992px) {
+  .hidden-lg-up {
+    display: none !important;
+  }
+}
+@media (max-width: 1199px) {
+  .hidden-lg-down {
+    display: none !important;
+  }
+}
+@media (min-width: 1200px) {
+  .hidden-xl-up {
+    display: none !important;
+  }
+}
+.hidden-xl-down {
+  display: none !important;
+}
+
+
 /* FOOTER */
 footer {
   bottom: 0;
@@ -45,7 +95,6 @@ footer.bigfoot #copyright-designer {
 footer.bigfoot #copyright-designer hr {
   margin-top: 0;
 }
-
 
 @media (max-width: 991px) {
   footer.bigfoot #footer-social {
