Mostrar Text Llarg OK

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -123,3 +123,9 @@ footer.bigfoot #copyright-designer hr {
     font-size: smaller;
   }
 }
+
+/* TEXTOS SCROLL */
+div.scroll {
+  overflow: auto;
+  max-height: 500px;
+}
