--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -129,3 +129,8 @@ div.scroll {
   overflow: auto;
   max-height: 500px;
 }
+
+/* PRESERVAR SALTS LINIA RELATS */
+span {
+  white-space: pre-line;
+}
